--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.extraPaths": [
         "./day_20 & 21",
-        "./day_22"
+        "./day_22",
+        "./day_23"
     ]
 }
