--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.analysis.extraPaths": [
         "./day_20 & 21",
         "./day_22",
-        "./day_23"
+        "./day_23",
+        "./day_20 and 21"
     ]
 }
